# org-roam-toolkit

./: .gitignore  AGENT.md  CHANGELOG.md  LICENSE  Makefile  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
Formula/: org-roam-toolkit.rb
docs/: conventions.md  developing-skills.md
docs/superpowers/plans/: 2026-05-08-agent-install-support.md
docs/superpowers/specs/: 2026-05-08-agent-install-support-design.md
mcp-servers/org-roam/: Cargo.toml  package.json  tsconfig.json
mcp-servers/org-roam/src/: index.ts  lib.rs  main.rs  resources.ts
mcp-servers/org-roam/tests/: contract.rs
plugins/org-roam-toolkit/: .mcp.json  README.md
plugins/org-roam-toolkit/.claude-plugin/: plugin.json
plugins/org-roam-toolkit/.codex-plugin/: plugin.json
plugins/org-roam-toolkit/commands/: add-toolkit.md  deep_note.md  gen-commit-msg.md  note.md  read-history.md  ref-extract.md  reference.md  study.md  to-read.md
plugins/org-roam-toolkit/skills/atomic-notes/: SKILL.md
plugins/org-roam-toolkit/skills/dashboard/: SKILL.md
plugins/org-roam-toolkit/skills/fetch/: SKILL.md
plugins/org-roam-toolkit/skills/fetch/scripts/: fetch  ocr
plugins/org-roam-toolkit/skills/org/: SKILL.md
plugins/org-roam-toolkit/skills/org-roam/: SKILL.md
plugins/org-roam-toolkit/skills/org-roam/references/: functions.md  installation.md  troubleshooting.md
plugins/org-roam-toolkit/skills/org-roam/scripts/: emacs-eval
plugins/org-roam-toolkit/skills/org/scripts/: emacs-eval
