[package]
name = "ortk-mcp"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "MCP server for org-roam operations via ortk-emacs-eval"

[[bin]]
name = "ortk-mcp"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
